# AsmDecoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean_cmake_build.cmake
include/: arm.h  common.h  elf.h  elf_32.h  elf_64.h  elf_common.h  elf_loader.h  error_common.h
src/: CMakeLists.txt  elf.cpp  elf_32.cpp  elf_64.cpp  elf_loader.cpp  main.cpp
test/: armv7_binary_test
